--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "express": "^4.17.2",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
