--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.19.3",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
