--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nuxt": "^2.15.8",
